<resources>
    <string name="app_name">LasteMv</string>
    <string name="text_btn_mini">Mini</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_ten">10</string>
    <string name="btn_sprint">Sprint</string>
    <string name="btn_long_jump">Kaugushüpe</string>
    <string name="btn_ball">Pallivise</string>
    <string name="btn_run">400m jooks</string>
    <string name="run">pikkjooks</string>
    <string name="btn_basketball">Korvpall</string>
    <string name="btn_football">Jalgpall</string>
    <string name="btn_volleyball">Võrkpall</string>
    <string name="btn_boxes">Kastironimine</string>
    <string name="btn_medicine_ball">Topispallijänn</string>
    <string name="btn_bike">Jalgratas</string>
    <string name="toolbar_main_fragment">Vali vanus</string>
    <string name="toolbar_dicipline_fragment">Vali ala</string>
    <string name="participant_age">%1$d aastane</string>
    <string name="database_table_name">%1$saastased</string>
    <string name="btn_enter">Sisesta</string>
    <string name="hint_referee">Kohtuniku nimi</string>
    <string name="toolbar_referee_fragment">Kohtunik</string>
    <string name="units_meters">meetrit</string>
    <string name="units_centimeters">sentimeetrit</string>
    <string name="units_baskets">korvi</string>
    <string name="units_goals">väravat</string>
    <string name="units_serves">pallingut</string>
    <string name="units_boxes">kasti</string>
    <string name="units_minutes">minutit</string>
    <string name="units_seconds">sekundit</string>
    <string name="toolbar_message_fragment">Saada sõnum</string>
    <string name="quick_message_didnt_participate">Ei osalenud</string>
    <string name="quick_message_need_help">Vajan abi</string>
    <string name="quick_message_custom_message">Uus sõnum</string>
    <string name="hint_quick_mesaage_number">Stardinumber</string>
    <string name="hint_quick_mesaage_referee_name">Kohtuniku nimi</string>
    <string name="result_field_empty">Tulemuse väli ei tohi tühi olla!</string>
    <string name="btn_send">Saada</string>
    <string name="toast_no_more_participants">Kõik tulemused sisestatud. Saada tulemused staapi.</string>
    <string name="progress_dialog_message">Laen andmeid, palun oota.</string>
    <string name="email_address">peeter144@gmail.com</string>
    <string name="three_years">kolme</string>
    <string name="four_years">nelja</string>
    <string name="five_years">viie</string>
    <string name="six_years">kuue</string>
    <string name="seven_years">seitsme</string>
    <string name="eight_years">kaheksa</string>
    <string name="nine_years">üheksa</string>
    <string name="ten_years">kümne</string>
    <string name="mini_table">minid</string>
    <string name="units_hundreds">sajandikku</string>
    <string name="no_internet_connection">Interneti ühendus puudub.</string>
    <string name="mini_age">mini</string>


</resources>
